--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@color/backcolor"
     tools:context=".MainActivity"
     android:orientation="vertical">
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:text="Welcome to Bakery Narah "
-        android:textSize="15pt"
+        android:textSize="23pt"
         android:textStyle="bold|italic"
         android:textColor="@color/colortext"
   android:fontFamily="cursive"
@@ -33,8 +33,8 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="101dp"
-        android:layout_marginTop="165dp"
+        android:layout_height="95dp"
+        android:layout_marginTop="100dp"
         android:background="@color/colorb"
         android:fontFamily="cursive"
         android:text="GO To Main menu"
