--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colortext">#122A0A</color>
     <color name="colort">#FFFFFF</color>
     <color name="colorb">#0B614B</color>
+    <color name="colortext1">#122A0A</color>
 </resources>
