--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/backcolor"
     tools:context=".MainActivity"
     android:orientation="vertical">
@@ -18,18 +18,17 @@
         />
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
         android:text="Welcome to Bakery Narah "
-        android:textSize="23pt"
-        android:textStyle="bold|italic"
+        android:layout_marginTop="80dp"
+        android:fontFamily="cursive"
+        android:textStyle="bold"
+        android:textSize="40dp"
         android:textColor="@color/colortext"
-  android:fontFamily="cursive"
+        />
 
-
-
-        ></TextView>
 
     <Button
         android:layout_width="match_parent"
@@ -39,7 +38,7 @@
         android:fontFamily="cursive"
         android:text="GO To Main menu"
         android:textColor="@color/colort"
-        android:textSize="15pt"
+        android:textSize="15dp"
         android:textStyle="bold|italic"
         android:onClick="btg"
         android:id="@+id/btg_onclick">
